--- a/hiveStayFrontend/package.json
+++ b/hiveStayFrontend/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.7.8",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
