--- a/hiveStayFrontend/package.json
+++ b/hiveStayFrontend/package.json
@@ -14,6 +14,7 @@
     "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.8",
+    "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
